--- a/main.tex
+++ b/main.tex
@@ -40,10 +40,11 @@
 \usepackage{mathtools}
 \usepackage{subfiles}
 \usepackage{float}
+\usepackage{setspace}
 
-\SetRealMargins{26mm}{20mm}
+\SetRealMargins{30mm}{20mm}
 \renewcommand{\floatpagefraction}{.8}
-
+\renewcommand{\baselinestretch}{1.25}
 \DefineBibliographyStrings{french}{
   %  backrefpage={see p.},
   backrefpage={},
@@ -51,7 +52,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-%\addbibresource{./Biblio/biblio.bib}
+\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
